--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                <select class="fields___country" name='country'>
                   <option value="country" disabled selected class="label__country">Country</option>
                   <option value="ukraine" name="UKRAINE">Ukraine</option>
-                  <option value="usa" name="USA">USA</option>
+                  <option  id = 'fields___countryusa' value="usa" name="USA">USA</option>
                </select>
            </p>
             <p class="form-row form-row__name"><label class="label">Имя:</label>
@@ -30,7 +30,7 @@
                <input type="text" name="usersurname">
             </p> 
             <p class="form-row form-row__lastname"><label class="label">Отчество:</label>
-               <input type="text" name="userlastname">
+               <input type="text" name="userlastname" id="userlastname">
             </p> 
             <p class="form-row form-row__add"><label class="label">Добавить ребенка: </label>
                <input type="text" name="addchild">
