--- a/index.html
+++ b/index.html
@@ -12,40 +12,53 @@
 </head>
 <body>
 <div class="wrapper">
-   <div class="content">
+   <div class="content" style='display: block'>
       <h1>Форма по сбору данных</h1>
       <form action="#" name="information">
          <div class="fields">
             <p class="form-row form-row__country"><label class="label">Выберите страну </label>
                <select class="fields___country" name='country'>
                   <option value="country" disabled selected class="label__country">Country</option>
-                  <option value="ukraine" name="UKRAINE">Ukraine</option>
-                  <option  id = 'fields___countryusa' value="usa" name="USA">USA</option>
+                  <option value="Ukraine" name="UKRAINE">Ukraine</option>
+                  <option  class = 'fields___countryusa' value="USA" name="USA">USA</option>
                </select>
            </p>
             <p class="form-row form-row__name"><label class="label">Имя:</label>
-                  <input type="text" name="username"> 
+                  <input class = 'username' type="text" name="username"> 
             </p>
             <p class="form-row form-row__surname"><label class="label">Фамилия:</label>
-               <input type="text" name="usersurname">
+               <input class = 'userlastname1' type="text" name="usersurname">
             </p> 
-            <p class="form-row form-row__lastname"><label class="label">Отчество:</label>
-               <input type="text" name="userlastname" id="userlastname">
-            </p> 
-            <p class="form-row form-row__add"><label class="label">Добавить ребенка: </label>
-               <input type="text" name="addchild">
-            </p>
-            <div class="fields__plus"><a href="" target="_blank"><img src="./Ellipse 1.png" alt="Reset"></a></div>
-            <div class="fields__submit"><button type="submit">ОТПРАВИТЬ</button></div>
+            <div class="lastname"><p class="form-row form-row__lastname"><label class="label">Отчество:</label>
+               <input type="text" name="userlastname" class="userlastname" id="userlastname">
+            </p></div> 
+            <div class="addchild"><p class="form-row form-row__add"><label class="label">Добавить ребенка: </label>
+               <input class= 'child childone' type="text" name="addchild">
+            </p></div>
+            <div class="fields__plus"><button class="fields__plus1" type="button"><img src="./Ellipse 1.png"></button></div>
+            <div class="fields__submit"><button id="submitbtn" type = 'reset' class="fields__submitbtn">ОТПРАВИТЬ</button></div>
          </div>  
       </form>
       
-   
+  
    
 
    
    </div>
+ <div id="persinfo" style='display: none'>Thank you</div>
 </div>
+
+
+<!-- <div>
+   <p class="out1"></p>
+   <button id="buttunpush">Push</button>
+</div>
+-->
+
+
+
+
+
 
 
 <script src="./index.js"></script>
